--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/v1/api/(.*)",
       "dest": "build/main.js",
       "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
     }
