--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/v1/api/(.*)",
-      "dest": "build/main.js",
+      "src": "/(.*)",
+      "dest": "src/main.js",
       "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
     }
   ]
