--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,10 @@
         {
           "key": "Access-Control-Allow-Headers",
           "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Origin"
+        },
+        {
+          "key": "Access-Control-Max-Age",
+          "value": "1000"
         }
       ]
     }
