--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,13 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/main.ts",
+      "src": "/src/main.ts",
       "use": "@vercel/node"
     }
   ],
   "headers": [
     {
-      "source": "src/main.ts",
+      "source": "/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "false" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
