--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "/src/main.ts",
+      "src": "src/main.ts",
       "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/main.ts",
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
     }
   ],
   "headers": [
