--- a/vercel.json
+++ b/vercel.json
@@ -10,12 +10,7 @@
     {
       "src": "/(.*)",
       "dest": "src/main.ts",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"],
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "false" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
